fixed error with body data not showing when there's an error.

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -16,11 +16,3 @@ nav {
     text-align: center;
     padding: 1em;
 }
-
-div.pair {
-    float:left;
-}
-
-input {
-    display: block;
-}
